# jls-toolbox

./: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
jls-toolbox/: next.config.ts  package.json
jls-toolbox/src/app/: layout.tsx  page.tsx
jls-toolbox/src/app/image/: layout.tsx  top-nav.tsx
jls-toolbox/src/app/image-compressor/: page.tsx
jls-toolbox/src/app/image/image-compress/: page.tsx
jls-toolbox/src/app/image/image-resize/: image-comparison-slider.tsx  image-item.tsx  page.tsx
jls-toolbox/src/components/app-sidebar/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: images.rs  lib.rs  main.rs
